--- a/university-login.html
+++ b/university-login.html
@@ -3,19 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>University Login</title>
+    <title>University Login - EduCV</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="login-container">
         <h2>University Login</h2>
-        <form>
-            <input type="text" placeholder="Enter Username" required>
-            <input type="password" placeholder="Enter Password" required>
+        <form id="loginForm">
+            <input type="email" id="email" placeholder="Enter Email" required>
+            <input type="password" id="password" placeholder="Enter Password" required>
+            <input type="hidden" id="role" value="university"> <!-- Role fixed as student -->
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <a href="university-signup.html">Sign Up</a></p>
     </div>
-    
+
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", async function (event) {
+            event.preventDefault(); // Prevent form submission
+
+            // Get form data
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+            const role = document.getElementById("role").value; // Role is fixed as "student"
+
+            // Send login request to the backend
+            try {
+                const response = await fetch("http://localhost:5000/login", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                    },
+                    body: JSON.stringify({ email, password, role }),
+                });
+
+                const data = await response.json();
+
+                if (response.ok) {
+                    // Login successful
+                    alert("Login successful!");
+                    window.location.href = "university-dashboard.html"; // Redirect to student dashboard
+                } else {
+                    // Login failed
+                    alert(data.message || "Login failed. Please try again.");
+                }
+            } catch (error) {
+                console.error("Error:", error);
+                alert("An error occurred. Please try again.");
+            }
+        });
+    </script>
 </body>
 </html>
